重构身份账号中心与登录边界